--- a/test_review.html
+++ b/test_review.html
@@ -20,7 +20,8 @@
     <textarea id="source">
 
 # Test Review
-## You ask questions about the material I let you know if it's on the test
+## You ask questions about the material
+## I let you know if it's on the test
 
 ## General Guidelines
 * 25-50 Multiple Choice
