--- a/test_review.html
+++ b/test_review.html
@@ -25,7 +25,7 @@
 
 ## General Guidelines
 * 25-50 Multiple Choice
-* 3 Short Answer / Essay
+* 3-5 Short Answer / Essay
 
 * You have all of class time to take the test, it's timed by canvas so don't forget to submit before the end of class
 
