--- a/test_review.html
+++ b/test_review.html
@@ -24,8 +24,8 @@
 ## I let you know if it's on the test
 
 ## General Guidelines
-* 25-50 Multiple Choice
-* 3-5 Short Answer / Essay
+* 25-50 Multiple Choice (50%)
+* 3-5 Short Answer / Essay (50%)
 
 * You have all of class time to take the test, it's timed by canvas so don't forget to submit before the end of class
 
