--- a/slides/test_review.html
+++ b/slides/test_review.html
@@ -25,7 +25,7 @@
 
 ## General Guidelines
 * 25-50 Multiple Choice (50%)
-* 3-5 Short Answer / Essay (50%)
+* 3-5 Short Answer / Essay / Programming Problems (50%)
 
 * You have all of class time to take the test, it's timed by canvas so don't forget to submit before the end of class
 
