--- a/slides/test_directions.html
+++ b/slides/test_directions.html
@@ -13,13 +13,14 @@ title: Test Directions
 * Look for the correct test in Canvas
 * Have only Canvas open during the test
 
+
 * Questions raise your hand and get my attention
 
 ---
 
 ## Coding Test 
 
-* Launch Visual Studio Code
+* Launch the IDE (Visual Studio/VS Code/etc)
 * Log into Canvas
 * Look for the correct test in Canvas
 * Have only Canvas and your IDE open during the test
