--- a/slides/test_review.html
+++ b/slides/test_review.html
@@ -1,39 +1,16 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Test Review</title>
-    <meta charset="utf-8">
-    <style>
-      @import url(https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz);
-      @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
-      @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
-
-      body { font-family: 'Droid Serif'; }
-      h1, h2, h3 {
-        font-family: 'Yanone Kaffeesatz';
-        font-weight: normal;
-      }
-      .remark-code, .remark-inline-code { font-family: 'Ubuntu Mono'; }
-    </style>
-  </head>
-  <body>
-    <textarea id="source">
+---
+layout: slides
+title: Test Review
+---
 
 # Test Review
+
 ## You ask questions about the material
+
 ## I let you know if it's on the test
 
 ## General Guidelines
+
 * 25-50 Multiple Choice (50%)
 * 3-5 Short Answer / Essay / Programming Problems (50%)
-
 * You have all of class time to take the test, it's timed by canvas so don't forget to submit before the end of class
-
-    </textarea>
-    <script src="https://remarkjs.com/downloads/remark-latest.min.js">
-    </script>
-    <script>
-      var slideshow = remark.create();
-    </script>
-  </body>
-</html>
