--- a/slides/test_directions.html
+++ b/slides/test_directions.html
@@ -9,25 +9,43 @@ title: Test Directions
 
 ## Test
 
-* Log into Canvas
-* Look for the correct test in Canvas
+* Please silence phones
+* Please don't talk when you are finished others might still be testing
+
+* Log into Canvas, Look for the correct test in Canvas
 * Have only Canvas open during the test
 
-
+* Technical problems let me know as soon as possible
 * Questions raise your hand and get my attention
 
 ---
 
 ## Coding Test 
 
-* Launch the IDE (Visual Studio/VS Code/etc)
-* Log into Canvas
-* Look for the correct test in Canvas
-* Have only Canvas and your IDE open during the test
+* Please silence phones
+* Please don't talk when you are finished others might still be testing
 
+* Launch the editor (Visual Studio/VS Code/etc)
+* Log into Canvas, Look for the correct test in Canvas
+* Have only Canvas and the IDE open during the test
 
+* Technical problems let me know as soon as possible
 * Questions raise your hand and get my attention
 * Copy and paste the code you have when you the program finished and move to the next one
+
+---
+
+## Final 
+
+* Please silence phones
+* Pizza! Eat! Stop and take a break. Eat!
+* Please don't talk when you are finished others might still be testing
+* Log into Canvas, Look for Final in Canvas
+  * Canvas quiz and editor open only during the entire test 
+
+* Come and see me before you leave so we can double check your grades
+  * Grades will be posted Wednesday night or earlier.
+  * Remember what you see is not your final grade as everything is curved.
 
 ---
 
@@ -37,3 +55,4 @@ title: Test Directions
 * Everything is curved so RELAX it’s normal for this first test to be harder than expected.
 * I will have them all graded by next class period. If you really need it graded sooner for whatever reason let me know.
 * We will review over the test next class and continue the lessons as planned.
+* Later questions? You have my contact information, call me.
