--- a/slides/test_directions.html
+++ b/slides/test_directions.html
@@ -13,7 +13,7 @@ title: Test Directions
 * Please don't talk when you are finished others might still be testing
 
 * Log into Canvas, Look for the correct test in Canvas
-* Have only Canvas open during the test
+  * Have only Canvas open during the test
 
 * Technical problems let me know as soon as possible
 * Questions raise your hand and get my attention
@@ -27,7 +27,7 @@ title: Test Directions
 
 * Launch the editor (Visual Studio/VS Code/etc)
 * Log into Canvas, Look for the correct test in Canvas
-* Have only Canvas and the IDE open during the test
+  * Have only Canvas and the editor open during the test
 
 * Technical problems let me know as soon as possible
 * Questions raise your hand and get my attention
@@ -38,14 +38,21 @@ title: Test Directions
 ## Final 
 
 * Please silence phones
-* Pizza! Eat! Stop and take a break. Eat!
 * Please don't talk when you are finished others might still be testing
+* Pizza! Eat! Stop and take a break. Eat!
 * Log into Canvas, Look for Final in Canvas
-  * Canvas quiz and editor open only during the entire test 
+  * Have only Canvas open during the test
 
-* Come and see me before you leave so we can double check your grades
-  * Grades will be posted Wednesday night or earlier.
-  * Remember what you see is not your final grade as everything is curved.
+---
+
+## Coding Final
+
+* Please silence phones
+* Please don't talk when you are finished others might still be testing
+* Pizza! Eat! Stop and take a break. Eat!
+* Launch the editor (Visual Studio/VS Code/etc)
+* Log into Canvas, Look for Final in Canvas
+  * Have only Canvas and the editor open during the final
 
 ---
 
@@ -55,4 +62,14 @@ title: Test Directions
 * Everything is curved so RELAX it’s normal for this first test to be harder than expected.
 * I will have them all graded by next class period. If you really need it graded sooner for whatever reason let me know.
 * We will review over the test next class and continue the lessons as planned.
+* Later questions? You have my contact information, call me.
+
+
+---
+
+## Post Final
+
+* Come and see me before you leave so we can double check your grades
+  * Grades will be posted Wednesday night or earlier
+  * Remember what you see is not your final grade as everything is curved
 * Later questions? You have my contact information, call me.
