--- a/slides/test_review.html
+++ b/slides/test_review.html
@@ -9,8 +9,20 @@ title: Test Review
 
 ## I let you know if it's on the test
 
+* You can leave when you have your questions answered
+
 ## General Guidelines
 
 * 25-50 Multiple Choice (50%)
-* 3-5 Short Answer / Essay / Programming Problems (50%)
+* 3-5 (50%)
+  * Short Answer
+    * 1 to 2 sentences
+  * Essay
+    * 2 paragraphs expected
+  * Programming Problems
+    * Working program without all the bells and whistles
+
 * You have all of class time to take the test, it's timed by canvas so don't forget to submit before the end of class
+
+* Only over material in pdf slides, book, and the module items listed with action words
+  * Read, watch, etc.
