--- a/slides/test_review.html
+++ b/slides/test_review.html
@@ -5,8 +5,9 @@ title: Test Review
 
 # Test Review
 
-## You ask questions about the material
-## I let you know if it's on the test
+---
+
+## You ask questions about the material I let you know if it's on the test
 
 * You can leave when you have your questions answered
 
