--- a/slides/test_directions.html
+++ b/slides/test_directions.html
@@ -31,7 +31,7 @@ title: Test Directions
 
 * Technical problems let me know as soon as possible
 * Questions raise your hand and get my attention
-* Copy and paste the code you have when you the program finished and move to the next one
+* Copy and paste the code you have when you the program finished or upload the file, and move to the next one
 
 ---
 
